...
        );
      }
    });

    return Scaffold(
      appBar: AppBar(
        title: const Text('カードをClaim'),
        backgroundColor: Theme.of(context).colorScheme.inversePrimary,
      ),
      body: Padding(
        padding: const EdgeInsets.all(16.0),
        child: Column(
          crossAxisAlignment: CrossAxisAlignment.stretch,
          children: [
            const Text(
              'NFC名刺をClaimするには、メールアドレスを入力してください',
              style: TextStyle(fontSize: 16),
            ),
            const SizedBox(height: 24),
            
            if (!_isEmailSent) ...[
              EmailInputWidget(
...
